--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "devDependencies": {
     "copy-webpack-plugin": "^7.0.0",
     "javascript-obfuscator": "^2.10.3",
-    "ts-loader": "^8.0.12",
+    "ts-loader": "^8.3.0",
     "typescript": "^4.1.3",
     "webpack": "^5.10.3",
     "webpack-cli": "^4.2.0",
     "webpack-obfuscator": "^3.3.0"
+  },
+  "dependencies": {
+    "package.json": "^2.0.1"
   }
 }
